// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation test 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "50",
    "content-type": "application/json",
    "vary": "Origin",
  },
  "req": {
    "data": {
      "operationName": "submitHero",
      "query": "mutation submitHero($heroInput: HeroInput!) {
        submitHero(heroInput: $heroInput) {
          id,
          name
        }
      }",
      "variables": {
        "heroInput": {
          "amountPeopleSaved": 1000,
          "name": "Rogue",
          "power": "Absorption of abilities",
        },
      },
    },
    "headers": {
      "accept": "application/json",
      "content-type": "application/json",
    },
    "method": "POST",
  },
  "status": 200,
  "text": "{"data":{"submitHero":{"id":"4","name":"Rogue"}}}
",
}
`;

exports[`Mutation test 2`] = `
[
  {
    "amountPeopleSaved": 10,
    "id": 1,
    "name": "spiderman",
    "power": "spider",
  },
  {
    "amountPeopleSaved": 100,
    "id": 2,
    "name": "Wolverine",
    "power": "Superhuman senses",
  },
  {
    "amountPeopleSaved": 1000,
    "id": 4,
    "name": "Rogue",
    "power": "Absorption of abilities",
  },
]
`;

exports[`Query test 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "82",
    "content-type": "application/json",
    "vary": "Origin",
  },
  "req": {
    "data": {
      "query": "query {heroes {
        id,
        name
      }}",
      "variables": null,
    },
    "headers": {
      "accept": "application/json",
      "content-type": "application/json",
    },
    "method": "POST",
  },
  "status": 200,
  "text": "{"data":{"heroes":[{"id":"1","name":"spiderman"},{"id":"2","name":"Wolverine"}]}}
",
}
`;
